--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "skiron-dust"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
-reqwest = { version = "0.11.12", features = ["blocking"] }
+image = "0.25.5"
+reqwest = { version = "0.11.27", features = ["blocking"] }
+bytes = "1.9.0"
+clap = { version = "4.5.23", features = ["derive"] }
